# parser-lib

./: .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  PREFIX  README.md  appveyor.yml  library.cmake
.circleci/: config.yml
2ndparty/: download.sh
cmake/: cxx20_concepts.cmake
demo/: CMakeLists.txt
demo/uri-rfc3986/: CMakeLists.txt  datetime.hpp  main.cpp  read_file.hpp  rfc3986.hpp  uri-rfc3986.grammar
include/pfs/parser/: core_rules.hpp  generator.hpp  line_counter_iterator.hpp  syntax_tree.hpp
include/pfs/parser/abnf/: error.hpp  node.hpp  parser.hpp  syntax_tree.hpp
tests/: CMakeLists.txt  abnf_rules.cpp  core_rules.cpp  generator.cpp  parse_files.cpp  syntax_tree.cpp
tests/data/: abnf.grammar  comment.grammar  incremental-alternatives.grammar  json-rfc4627.grammar  json-rfc8259.grammar  number.grammar  prose.grammar  uri-geo-rfc58070.grammar  wsp.grammar
tests/utils/: read_file.hpp
