################################################################################
# Copyright (c) 2021 Vladislav Trifochkin
#
# This file is part of [pfs-parser](https://github.com/semenovf/pfs-parser) library.
################################################################################
add_subdirectory(uri-rfc3986)
